# python-file-organizer

./: .gitignore  DEVLOG.md  README.md  file_organizer.py  pyproject.toml
file_organizer/: __init__.py  __main__.py  cli.py
