[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "0.1.0"
description = "Organize files into category folders."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
file-organizer = "file_organizer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["file_organizer*"]
